Fix stretch-img CSS: merge duplicate rules, add overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,9 @@ h4 { font-size: 22px; }
 }
 
 .stretch-img {
+    position: relative;
     min-height: 400px;
+    overflow: hidden;
 }
 
 .stretch-img img {
@@ -214,10 +216,6 @@ h4 { font-size: 22px; }
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.stretch-img {
-    position: relative;
 }
 
 /* ============================================
